fix spacing on 'the weekend' details

--- a/index.css
+++ b/index.css
@@ -70,6 +70,8 @@ p {
 
 .details-div h2, .details-div h3, .details-div p{
 	text-align: center;
+  margin-left: 15%;
+  margin-right: 15%;
 }
 
 .details-div ul {
